--- a/config.toml
+++ b/config.toml
@@ -24,6 +24,16 @@ copyright = "(c) RJS Data Science LLC"
     showRecentWorks = false
     showDownload = false
     showClients = false
+    
+    disable_highlight = false
+    highlightjsVersion = "9.11.0"
+    highlightjsCDN = "//cdn.bootcss.com"
+    highlightjsLang = ["r", "yaml"]
+    highlightjsTheme = "github"
+
+    MathJaxCDN = "//cdn.bootcss.com"
+    MathJaxVersion = "2.7.1"
+
 
 [[menu.main]]
     name = "home"
