Add summary feature to all pages. Add pagination to the blog page. Add tag links. Start on the analysis of Stan output blog post.

--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,8 @@ theme = "hugo-initio"
 publishDir = "public"
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 copyright = "(c) RJS Data Science LLC"
+paginate = 10
+paginatePath = "page"
 
 [params]
     name = "RJS Data Science LLC"
