--- a/config.toml
+++ b/config.toml
@@ -37,8 +37,9 @@ paginatePath = "page"
 
     MathJaxCDN = "//cdn.bootcss.com"
     MathJaxVersion = "2.7.1"
-    
-    disqusShortname = "rjsds"
+
+[params.disqus]    
+    site = "rjsds"
 
 
 [[menu.main]]
