Change summary length to 20 to make it nicer to render.

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
 copyright = "(c) RJS Data Science LLC"
 paginate = 10
 paginatePath = "page"
+summaryLength = 20
 
 [params]
     name = "RJS Data Science LLC"
